--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
-    "start": "ng serve",
+    "start": "node server",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
@@ -20,13 +20,25 @@
     "@angular/platform-browser": "2.0.0",
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/router": "3.0.0",
+    "body-parser": "^1.15.2",
+    "bootstrap": "^3.3.7",
+    "bootswatch": "^3.3.7",
     "core-js": "^2.4.1",
+    "ejs": "^2.5.2",
+    "express": "^4.14.0",
+    "jquery": "^3.1.1",
+    "mongojs": "^2.4.0",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
+    "@types/body-parser": "0.0.33",
+    "@types/bootstrap": "^3.3.32",
+    "@types/ejs": "^2.3.31",
+    "@types/express": "^4.0.33",
     "@types/jasmine": "^2.2.30",
+    "@types/jquery": "^2.0.33",
     "angular-cli": "1.0.0-beta.16",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
